# lite-pdf-generator

./: ADB_COMMANDS.md  CLAUDE.md  README.md  build_android.sh  settings.gradle.kts
.claude/: settings.json
app/: build.gradle.kts
app/src/androidTest/java/light/pdf/generator/kulupu/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/light/pdf/generator/kulupu/: CropFragment.java  CropView.java  DirectorySortDialog.java  ImageSorter.java  MainActivity.java  PdfBuilder.java  TwoWayScrollView.java
app/src/main/native/: CMakeLists.txt  pdf_builder.c  pdf_builder_jni.c  vfs.c
app/src/main/native/include/: pdf_builder.h  vfs.h
app/src/main/native/src/: pdf_builder.c  pdf_builder_jni.c  vfs.c
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  dialog_sort.xml  fragment_crop.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/light/pdf/generator/kulupu/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
